--- a/pp2.html
+++ b/pp2.html
@@ -13,7 +13,7 @@
         <div class="head">
             <h1 class="b">My Portfolio</h1>
             <ul>
-           <li> <a class="a" href="/portfolio/portfolio.html">Home</a></li>
+           <li> <a class="a" href="/portfolio/index.html">Home</a></li>
            <li> <a class="a" href="/portfolio/pp2.html">Projects</a></li>
            <li> <a class="a" href="/portfolio/pp3.html">Contact</a></li>
         </ul>
@@ -34,8 +34,8 @@
     <p>Job Application</p>
     <p>⬇️</p>
     <div class="photo1" data-aos="fade-up"><a href="/Job Application/practic.html" ><img src="https://www.shutterstock.com/image-vector/vector-illustration-hands-graphic-halftone-260nw-2320022869.jpg"></a></div>
-     <p>I also made this website although small but i feel met the combination very well.</p>
-     <p class="p4">Sometimes small details like button can enhance the Whole website</p>
+     <p>I also made this website although small but i feel met the combination very well.
+     Sometimes small details like button can enhance the Whole website</p>
 
 </div>
 </div>
@@ -45,7 +45,7 @@
         <a href="https://www.facebook.com/profile.php?id=100016791999107"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/rohit.sharma.0001?igsh=MTJxanpoa2dpcDVpZA=="><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href=""><i class="fa-brands fa-square-github"></i></a>
+                <a href="https://github.com/RohitKumarSharma610"><i class="fa-brands fa-square-github"></i></a>
     </div>
  <div class="foot">
     <p><i>@ 2024 My Portfolio.All rights reserved</i></p>
