--- a/pp3.html
+++ b/pp3.html
@@ -13,7 +13,7 @@
     <div class="head">
         <h1 class="b">My Portfolio</h1>
         <ul>
-       <li> <a class="a" href="/portfolio/portfolio.html">Home</a></li>
+       <li> <a class="a" href="/portfolio/index.html">Home</a></li>
        <li> <a class="a" href="/portfolio/pp2.html">Projects</a></li>
        <li> <a class="a" href="/portfolio/pp3.html">Contact</a></li>
     </ul>
@@ -24,7 +24,8 @@
     <div class="apply-box" data-aos="flip-left"
     data-aos-easing="ease-out-cubic"
     data-aos-duration="2000">
-    <form action="">
+
+    <form action="https://formsubmit.co/rohitsharma6102003@email.com">
         
         <div class="form-control">
             <label for="name"> Name</label>
@@ -44,7 +45,7 @@
           </div>
          
          <div class="button-contanior">
-          <a href="/portfolio/pp4.html" class="button">Submit</a>
+          <a href="/portfolio/pp4.html" class="button" name="submit" >Submit</a>
           </div>
 
     </form>
@@ -57,7 +58,7 @@
               <a href="https://www.facebook.com/profile.php?id=100016791999107"><i class="fa-brands fa-facebook"></i></a>
                       <a href="https://www.instagram.com/rohit.sharma.0001?igsh=MTJxanpoa2dpcDVpZA=="><i class="fa-brands fa-instagram"></i></a>
                       <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-                      <a href=""><i class="fa-brands fa-square-github"></i></i></a>
+                      <a href="https://github.com/RohitKumarSharma610"><i class="fa-brands fa-square-github"></i></i></a>
           </div>
        <div class="foot">
           <p><i>@ 2024 My Portfolio.All rights reserved</i></p>
