--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -13,7 +13,7 @@
         <div class="head">
             <h1 class="b">My Portfolio</h1>
             <ul>
-           <li> <a class="a" href="/portfolio/portfolio.html">Home</a></li>
+           <li> <a class="a" href="/portfolio/index.html">Home</a></li>
            <li> <a class="a" href="/portfolio/pp2.html">Projects</a></li>
            <li> <a class="a" href="/portfolio/pp3.html">Contact</a></li>
         </ul>
@@ -22,9 +22,11 @@
 
     <div class="body-screen">
         <h1 class="head2"  data-aos="flip-up">Welcome To My Portfolio</h1>
-        <p  data-aos="flip-up">HI EVERYONE ! My Name is ROHIT KUMAR SHARMA and i am a front-end student and here i am makinga website </p>
-        <p  data-aos="flip-up">And I am studing all these mindblowing things in Govt.Ranbir college BCA.</p>
-    <div class="photo" data-aos="fade-right"></div>
+        <p  data-aos="flip-up">HI EVERYONE ! My Name is ROHIT KUMAR SHARMA and i am a front-end student and here i am makinga website 
+        And I am studing all these mindblowing things in Govt.Ranbir college BCA.</p>
+    <div class="photo">
+        <div class="photo1" data-aos="fade-up"></div>
+    </div>
 </div>
 
  <footer>
@@ -33,7 +35,7 @@
             <a href="https://www.facebook.com/profile.php?id=100016791999107"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/rohit.sharma.0001?igsh=MTJxanpoa2dpcDVpZA=="><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href=""><i class="fa-brands fa-square-github"></i></a>
+                    <a href="https://github.com/RohitKumarSharma610"><i class="fa-brands fa-square-github"></i></a>
         </div>
      <div class="foot">
         <p><i>@ 2024 My Portfolio.All rights reserved</i></p>
