--- a/pp4.html
+++ b/pp4.html
@@ -14,7 +14,7 @@
         <div class="head">
             <h1 class="b">My Portfolio</h1>
             <ul>
-           <li> <a class="a" href="/portfolio/portfolio.html">Home</a></li>
+           <li> <a class="a" href="/portfolio/index.html">Home</a></li>
            <li> <a class="a" href="/portfolio/pp2.html">Projects</a></li>
            <li> <a class="a" href="/portfolio/pp3.html">Contact</a></li>
         </ul>
@@ -37,7 +37,7 @@
         <a href="https://www.facebook.com/profile.php?id=100016791999107"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/rohit.sharma.0001?igsh=MTJxanpoa2dpcDVpZA=="><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href=""><i class="fa-brands fa-square-github"></i></a>
+                <a href="https://github.com/RohitKumarSharma610"><i class="fa-brands fa-square-github"></i></a>
     </div>
  <div class="foot">
     <p><i>@ 2024 My Portfolio.All rights reserved</i></p>
