--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h1 class="b">My Portfolio</h1>
             <ul>
            <li> <a class="a" href="/portfolio/index.html">Home</a></li>
-           <li> <a class="a" href="/portfolio/pp2.html">Projects</a></li>
-           <li> <a class="a" href="/portfolio/pp3.html">Contact</a></li>
+           <li> <a class="a" href="/portfolio/index2.html">Projects</a></li>
+           <li> <a class="a" href="/portfolio/index3.html">Contact</a></li>
         </ul>
         </div>
     </header>
