--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="pp3.css">
+    <link rel="stylesheet" href="index3.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -14,8 +14,8 @@
         <h1 class="b">My Portfolio</h1>
         <ul>
        <li> <a class="a" href="/portfolio/index.html">Home</a></li>
-       <li> <a class="a" href="/portfolio/pp2.html">Projects</a></li>
-       <li> <a class="a" href="/portfolio/pp3.html">Contact</a></li>
+       <li> <a class="a" href="/portfolio/index2.html">Projects</a></li>
+       <li> <a class="a" href="/portfolio/index3.html">Contact</a></li>
     </ul>
     </div>
 </header>
@@ -45,7 +45,7 @@
           </div>
          
          <div class="button-contanior">
-          <a href="/portfolio/pp4.html" class="button" name="submit" >Submit</a>
+          <a href="/portfolio/index4.html" class="button" name="submit" >Submit</a>
           </div>
 
     </form>
