--- a/index2.html
+++ b/index2.html
@@ -13,9 +13,9 @@
         <div class="head">
             <h1 class="b">My Portfolio</h1>
             <ul>
-           <li> <a class="a" href="/portfolio/index.html">Home</a></li>
-           <li> <a class="a" href="/portfolio/index2.html">Projects</a></li>
-           <li> <a class="a" href="/portfolio/index3.html">Contact</a></li>
+           <li> <a class="a" href="index.html">Home</a></li>
+           <li> <a class="a" href="index2.html">Projects</a></li>
+           <li> <a class="a" href="index3.html">Contact</a></li>
         </ul>
         </div>
     </header>
