adding project detail

--- a/index2.html
+++ b/index2.html
@@ -26,14 +26,14 @@
         <p class="p3" data-aos="flip-up">Web Devlopment project 1</p><br>
         <p>Amazone Clone</p>
         <p>⬇️</p>
-    <div class="photo" data-aos="fade-up"><a href="/Amazone Clone/index.html"><img src="https://media.istockphoto.com/id/641950320/photo/blank-picture-frame-template-interior-wall.webp?b=1&s=612x612&w=0&k=20&c=0B_ZOhJtKzG70W1sfhicw7XdmUuXQFQq8r2AMvbnPYw="></a></div>
+    <div class="photo" data-aos="fade-up"><a href="#"><img src="https://media.istockphoto.com/id/641950320/photo/blank-picture-frame-template-interior-wall.webp?b=1&s=612x612&w=0&k=20&c=0B_ZOhJtKzG70W1sfhicw7XdmUuXQFQq8r2AMvbnPYw="></a></div>
 </div>
 <!-- box2 -->
 <div class="box2">
     <p  class="p3"  data-aos="flip-up">Web Devlopment project 2</p><br>
     <p>Job Application</p>
     <p>⬇️</p>
-    <div class="photo1" data-aos="fade-up"><a href="/Job Application/practic.html" ><img src="https://www.shutterstock.com/image-vector/vector-illustration-hands-graphic-halftone-260nw-2320022869.jpg"></a></div>
+    <div class="photo1" data-aos="fade-up"><a href="Job Application - Copy/practic.html" ><img src="https://www.shutterstock.com/image-vector/vector-illustration-hands-graphic-halftone-260nw-2320022869.jpg"></a></div>
      <p>I also made this website although small but i feel met the combination very well.
      Sometimes small details like button can enhance the Whole website</p>
 
